force-app/main/default/objects/SCOC__CIFASList__c/SCOC__CIFASList__c.object-meta.xml
<CustomObject>
    <description>Response Entity CIFAS List</description>
    <label>CIFAS</label>
    <nameField>
        <displayFormat>CIFAS-{00000}</displayFormat>
        <label>CIFAS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIFAS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>