force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__caseType__c.field-meta.xml
<CustomField>
    <fullName>SCOC__caseType__c</fullName>
    <description>Case Type</description>
    <label>Case Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>