force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__companyNumber__c.field-meta.xml
<CustomField>
    <fullName>SCOC__companyNumber__c</fullName>
    <description>Company Number</description>
    <label>Company Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>