force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__facility__c.field-meta.xml
<CustomField>
    <fullName>SCOC__facility__c</fullName>
    <description>Facility</description>
    <label>Facility</label>
    <length>3</length>
    <type>Text</type>
</CustomField>