force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__filingReason_14__c.field-meta.xml
<CustomField>
    <fullName>SCOC__filingReason_14__c</fullName>
    <description>Filing Reason 14</description>
    <label>Filing Reason 14</label>
    <length>255</length>
    <type>Text</type>
</CustomField>