force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__fraudDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__fraudDate__c</fullName>
    <description>Fraud Date</description>
    <label>Fraud Date</label>
    <type>Date</type>
</CustomField>