force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__homeTelephone__c.field-meta.xml
<CustomField>
    <fullName>SCOC__homeTelephone__c</fullName>
    <description>Home Telephone</description>
    <label>Home Telephone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>