force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__managingMemberName__c.field-meta.xml
<CustomField>
    <fullName>SCOC__managingMemberName__c</fullName>
    <description>Managing Member Name</description>
    <label>Managing Member Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>