force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__managingMemberNumber__c.field-meta.xml
<CustomField>
    <fullName>SCOC__managingMemberNumber__c</fullName>
    <description>Managing Member Number</description>
    <label>Managing Member Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>