force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__matchRuleResult_2_matchAchieved__c.field-meta.xml
<CustomField>
    <fullName>SCOC__matchRuleResult_2_matchAchieved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Match Rule Result 2 Match Achieved</description>
    <inlineHelpText>Match Rule Result 2 Match Achieved</inlineHelpText>
    <label>Match Rule Result 2 Match Achieved</label>
    <type>Checkbox</type>
</CustomField>