force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__mobileTelephone__c.field-meta.xml
<CustomField>
    <fullName>SCOC__mobileTelephone__c</fullName>
    <description>Mobile Telephone</description>
    <label>Mobile Telephone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>