force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__nameMatchStatusCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__nameMatchStatusCode__c</fullName>
    <description>Name Match Status Code</description>
    <label>Name Match Status Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>