force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__nameMatchStatusText__c.field-meta.xml
<CustomField>
    <fullName>SCOC__nameMatchStatusText__c</fullName>
    <description>Name Match Status Text</description>
    <label>Name Match Status Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>