force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__productCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__productCode__c</fullName>
    <description>Product Code</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>