force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__referenceText__c.field-meta.xml
<CustomField>
    <fullName>SCOC__referenceText__c</fullName>
    <description>Reference Text</description>
    <label>Reference Text</label>
    <length>40</length>
    <type>Text</type>
</CustomField>