force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__SourcedFrom__c.field-meta.xml
<CustomField>
    <fullName>SCOC__SourcedFrom__c</fullName>
    <description>Sourced From</description>
    <label>Sourced From</label>
    <length>3</length>
    <type>Text</type>
</CustomField>