force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__subjectRole__c.field-meta.xml
<CustomField>
    <fullName>SCOC__subjectRole__c</fullName>
    <description>Subject Role</description>
    <label>Subject Role</label>
    <length>3</length>
    <type>Text</type>
</CustomField>