force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__subjectRoleQualifier__c.field-meta.xml
<CustomField>
    <fullName>SCOC__subjectRoleQualifier__c</fullName>
    <description>Subject Role Qualifier</description>
    <label>Subject Role Qualifier</label>
    <length>3</length>
    <type>Text</type>
</CustomField>