force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__supplyDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__supplyDate__c</fullName>
    <description>Supply Date</description>
    <label>Supply Date</label>
    <type>Date</type>
</CustomField>