force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__timeAtAddressFrom__c.field-meta.xml
<CustomField>
    <fullName>SCOC__timeAtAddressFrom__c</fullName>
    <description>Time at Address From Date</description>
    <label>Time at Address From Date</label>
    <type>Date</type>
</CustomField>