force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__timeAtAddressMoreThan__c.field-meta.xml
<CustomField>
    <fullName>SCOC__timeAtAddressMoreThan__c</fullName>
    <description>Time at Address More Than in months</description>
    <label>Time at Address More Than</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>