force-app/main/default/objects/SCOC__CIFASList__c/fields/SCOC__timeAtAddressPeriod__c.field-meta.xml
<CustomField>
    <fullName>SCOC__timeAtAddressPeriod__c</fullName>
    <description>Time at Address Period in months</description>
    <label>Time at Address Period</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>